@@ -2,6 +2,7 @@
 7.75  2018-04-09
   - Deprecated placeholder quoting with "(placeholder)" in favor of
     "<placeholder>".
+  - Fixed warnings in Mojo::Collection.
 
 7.74  2018-04-06
   - Improved unknown placeholder types to match nothing in
